submission/feedback-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: feedback-api-deployment
  labels:
    app: feedback-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: feedback-api
  template:
    metadata:
      labels:
        app: feedback-api
    spec:
      containers:
        - name: feedback-api
          image: localregistry.lc:30500/feedback-api:submission
          imagePullPolicy: Always
          ports:
            - containerPort: 9000
              protocol: TCP
          volumeMounts:
            - name: sqlite-volume
              mountPath: /usr/db
      volumes:
        - name: sqlite-volume
          persistentVolumeClaim:
            claimName: sqlite-pvc
