submission/frontend.yaml
apiVersion: networking.k8s.io/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  selector:
    matchLabels:
      app: frontend
  replicas: 1
  minReadySeconds: 15
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - image: localregistry.lc:30500/frontend:submission
          imagePullPolicy: Always
          name: frontend
          ports:
            - containerPort: 80
