submission/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  labels: 
    app: frontend-service
spec:
  type: NodePort
  selector:
    app: frontend
  ports:
    - port: 80
