submission/logic-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: logic-api-service
  labels: 
    app: logic-api-service
spec:
  selector:
    app: logic-api
  ports:
    - protocol: TCP
      port: 5000
