submission/logic-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logic-api
  labels:
    app: logic-api
spec:
  minReadySeconds: 15
  replicas: 2
  selector:
    matchLabels:
      app: logic-api
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: logic-api
    spec:
      containers:
        - image: localregistry.lc:30500/logic-api:submission
          imagePullPolicy: Always
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 3
          name: logic-api
          ports:
            - containerPort: 5000
---

apiVersion: v1
kind: Service
metadata:
  name: logic-api-service
spec:
  selector:
    app: logic-api
  ports:
    - port: 5000
