submission/api-gateway-ingress-feedback.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-gateway-ingress-feedback
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /feedback
spec:
  rules:
  - http:
      paths:
      - path: /api/feedback
        pathType: Exact
        backend:
          service:
            name: feedback-api-service
            port:
              number: 9000
      - path: /admin/feedback
        pathType: Exact
        backend:
          service: 
            name: feedback-api-service
            port:
              number: 9000
