submission/api-gateway-ingress-logic-api-admin.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-gateway-ingress3
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        paths:
          - path: /admin/(/|$)(.*)
            pathType: Exact
            backend:
              service:
                name: feedback-api-service
                port:
                  number: 9000
